testsuite/tests/deriving/should_fail/T7148.stderr
T7148.hs:27:40: error: [GHC-05617]
    • Could not deduce ‘forall b1.
                        Coercible
                          (SameType () b1 -> SameType b b1)
                          (SameType () b1 -> SameType (Tagged a b) b1)’
        arising from the coercion of the method ‘iso1’
          from type ‘forall b1. SameType () b1 -> SameType b b1’
            to type ‘forall b1. SameType () b1 -> SameType (Tagged a b) b1’
      from the context: IsoUnit b
        bound by the deriving clause for ‘IsoUnit (Tagged a b)’
        at T7148.hs:27:40-46
    • When deriving the instance for (IsoUnit (Tagged a b))

